# distri_kv

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
include/: KV_opt_impl.h
proto/: CMakeLists.txt  kv_opt.grpc.pb.cc  kv_opt.grpc.pb.h  kv_opt.pb.cc  kv_opt.pb.h  kv_opt.proto
src/: CMakeLists.txt  KV_opt_impl.cpp  myclient.cpp  myserver.cpp
